--- a/stats-preview-card-component-main/css/style.css
+++ b/stats-preview-card-component-main/css/style.css
@@ -7,20 +7,35 @@
   --main-color-font-stats: hsla(0, 0%, 100%, 0.6);
   --main-font-family-body: 'Inter', sans-serif;
   --main-img-mobile: url(./images/image-header-mobile.jpg);
+  --main-img-desktop: url(./images/image-header-desktop.jpg);
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  border:0;
+}
+
+html {
+  height: 100vh;
+}
+
 
 body {
-  margin: 70px 15px;
   background-color: var(--main-bg-color);
   font-family: var(--main-font-family-body);
+  font-size: 15px;
+  height: 100%;
 }
 
-figure {
-  margin: 0;
+main {
+  height: 100%;
+  display: flex;    
+  padding: 70px 15px;
 }
 
 .img {
-  background-image: var(--main-img-mobile);
+  background:var(--main-img-mobile);
   background-size: cover;
   background-repeat:no-repeat;
   width: 100%;
@@ -28,12 +43,7 @@ figure {
 }
 
 .borde-radius-top {
-  -webkit-border-top-left-radius: 5px;
-  -webkit-border-top-right-radius: 5px;
-  -moz-border-radius-topleft: 5px;
-  -moz-border-radius-topright: 5px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  border-radius: 10px 10px 0px 0px;
 }
 
 .overlay {
@@ -43,34 +53,23 @@ figure {
   z-index: 1;
   height: 270px;
 }
-.container {
-  width: 100%;
-  height: 100vh;
-}
-.main-section {
-  -webkit-border-bottom-right-radius: 5px;
-  -webkit-border-bottom-left-radius: 5px;
-  -moz-border-radius-bottomright: 5px;
-  -moz-border-radius-bottomleft: 5px;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
+
+.main-section { 
+  border-radius: 0px 0px 10px 10px;
   background-color: var(--main-bg-card-color);
-  height: 100%;
+  
 }
 
 .container-main {
   padding: 30px;
-    
 }
 
 .container-body {
   margin: 20px 0;
-
 }
 
 .container-body p {
   color: var(--main-color-font-paragraph);
-  font-size: 15px;
   font-weight: 400;
   text-align: center;
   line-height: 180%;
@@ -78,13 +77,18 @@ figure {
 
 .container-body  h1 {
   text-align: center;
+  font-size: 26px;
+  margin: 0 0 20px 0;
 }
 
 h1, h2 {
   font-weight: 700;
   color: var(--main-color-font-heading);
 }
-.accent {color: var(--main-bg-accent-color);}
+
+.accent {
+  color: var(--main-bg-accent-color);
+}
 
 .container-stats {
   margin: 30px 0px 10px 0px;
@@ -103,5 +107,86 @@ h1, h2 {
 }
 
 .stat {
-  margin: 15px;
+  margin: 20px 0;
+}
+
+@media (min-width:550px) {
+  .container-stats {
+    display: flex;
+    justify-content: center;
+  }
+
+  .main-section {
+    width: 80%;
+    margin: auto;
+  }
+
+  .stat {
+    margin: 20px;
+  }
+}
+
+@media (min-width:700px) {
+  main {
+    padding: 0;
+  }
+  .img {
+    background-image: var(--main-img-desktop);
+    height: 400px;
+  }
+  .overlay {
+    margin: -400px 0 0 0;
+    height: 400px;
+  }
+  
+  .main-section {
+    width: 540px;
+    margin: auto;
+  }
+}
+
+@media (min-width:1024px) {  
+  .img {
+    background-image: var(--main-img-desktop);
+    background-size: cover;
+    width: 50%;
+  }
+
+  .borde-radius-top {
+    border-radius: 0px 10px 10px 0px;
+  }
+
+  .main-section {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    border-radius: 10px 10px 10px 10px;
+    width: 80%;
+  }
+  
+  .container-main {
+    border-radius: 10px 0 0 10px;
+    width: 50%;
+    padding: 0 0 0 50px;
+  }
+
+  .container-body  h1 {
+    text-align: start;
+    font-size: 35px;
+  }
+
+  .container-body p {
+    text-align: start;
+    width: 80%;
+  }
+
+  .container-stats {
+    text-align: start;
+    justify-content: start;
+    margin-top: 70px;
+  }
+
+  .stat {
+    margin: 0 60px 0 0;
+  }
 }
