--- a/base-apparel-coming-soon-master/css/style.css
+++ b/base-apparel-coming-soon-master/css/style.css
@@ -2,8 +2,7 @@
   --font-family-main : 'Josefin Sans', sans-serif;
   --primary-acent: hsl(0, 36%, 70%);
   --primary-color: hsl(0, 6%, 24%);
-  /* --primary-color: hsl(0, 93%, 68%); */
-  
+  /* --primary-color: hsl(0, 93%, 68%); */  
 }
 
 * {
@@ -19,71 +18,182 @@ html {
   height: 100vh;
 }
 
+body, main, section {
+  height: 100%;
+}
+
+section {
+  padding-top: 80px;
+}
+
 .container-nav {
   padding: 30px;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top:0;
 }
 
 .container-nav img {
-  width: 33%;
+  width: 100px;
 }
 
-.container-img img {
+.header .container-img img { 
   width: 100%;
+  height: 100%;
 }
 
-.container-info {
+.header .container-info {
   padding: 50px 30px;
   text-align: center;
 }
 
-.container-info h1 span {
+.header .container-info h1 span {
   color: var(--primary-acent);
-  font-weight: 300;
-  
+  font-weight: 300;  
 }
 
-.container-info h1, .container-info h1 span {
+.header .container-info h1, .header .container-info h1 span {
   font-size: 40px;
   text-transform: uppercase;
-  letter-spacing: 8px; 
+  letter-spacing: 10px; 
 }
 
-.container-info h1 {
+.header .container-info h1 {
   margin-bottom: 20px;
 }
 
-.container-info p {
+.header .container-info p {
   color: var(--primary-acent);
-  font-weight: 300;
+  font-weight: 400;
   line-height: 150%;
   margin-bottom: 20px; 
 }
 
-form {
-  margin: 20px 0;
-  padding: 15px 25px;
+.form {
+  margin: 30px 0 10px 0;
   border-radius: 50px;
   border: 1px var(--primary-acent) solid;
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 
-form input:first-child {
+.form .email {
+  width: 60%;
   outline: none;
+  margin: 13px 23px;
 }
 
-form input::-webkit-input-placeholder {
+.form .email::-webkit-input-placeholder {
   color: var(--primary-acent);
-  padding-top: 30px;
   font-size: 15px;
+  font-weight: 300;
 }
 
 .button {
   color:white;
   background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
-  padding: 15px 25px;
+  padding: 12px 25px;
   border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 1px 15px 8px rgb(0 0 0 / 10%);
   position: absolute;
-  right: 10%;
-  top: 80%;
+  right: -2px;
+  bottom: -1px;
+}
+
+.button:hover {
+  background: linear-gradient(135deg, #ffdbdb, #ffdbdb);
+}
+
+.header .contenedor-label {
+  text-align: start;
+}
+
+ .label {
+  padding: 0 24px;
+  font-size: 13px;
+  color: red;
+  visibility: hidden;
+}
+
+.error {
+  border: 1px red solid;
+}
+
+.true {
+  border: 1px #00ff3d solid;
+}
+
+.label-true {
+  color: #00ff3d;
+}
+
+.icon-error {
+  position: absolute;
+  left: -50%;
+  bottom: 22%;
+  visibility: hidden;
+}
+
+.visibility-true {
+  visibility: visible;
+}
+
+@media (min-width:1024px) {
+  section {
+    padding-top: 0;
+  }
+  
+  section .container-nav {
+    padding: 50px 150px;  
+  }
+
+  .container-nav img {
+    width: 100%;
+  }
+
+  .header {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .header .container-info {
+    display: flex;
+    padding: 100px 150px;
+    flex-direction: column;
+    justify-content: center;
+    text-align: start;
+    background-image: url(./images/bg-pattern-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+  }
+
+  .header .container-img img{
+    width: 577.22px;
+    object-fit: cover;
+  }
+
+  .header .container-info h1,.header .container-info h1 span {
+    font-size: 70px;
+  }
+
+  .header .container-info p {
+    width: 430px;
+  }
+
+  .header .form {
+    width: 430px;
+  }
+
+  .button {
+    padding: 12px 35px;
+
+  }
 }
