--- a/base-apparel-coming-soon-master/css/style.css
+++ b/base-apparel-coming-soon-master/css/style.css
@@ -72,17 +72,18 @@ section {
 
 .form {
   margin: 30px 0 10px 0;
-  border-radius: 50px;
-  border: 1px var(--primary-acent) solid;
   display: flex;
   justify-content: space-between;
   position: relative;
 }
 
-.form .email {
-  width: 60%;
+.email {
+  border-radius: 50px;
+  border: 1px var(--primary-acent) solid;
+  width: 100%;
   outline: none;
-  margin: 13px 23px;
+  padding: 13px 23px;
+  background: transparent;
 }
 
 .form .email::-webkit-input-placeholder {
@@ -102,7 +103,7 @@ section {
   box-shadow: 1px 15px 8px rgb(0 0 0 / 10%);
   position: absolute;
   right: -2px;
-  bottom: -1px;
+  bottom: 0px;
 }
 
 .button:hover {
