--- a/base-apparel-coming-soon-master/css/style.css
+++ b/base-apparel-coming-soon-master/css/style.css
@@ -170,7 +170,7 @@ section {
     flex-direction: column;
     justify-content: center;
     text-align: start;
-    background-image: url(./images/bg-pattern-desktop.svg);
+    background: url(./images/bg-pattern-desktop.svg), linear-gradient(135deg, hsl(0, 20%, 99%),hsl(0, 69%, 97%));
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
