--- a/intro-component-with-signup-form-master/css/style.css
+++ b/intro-component-with-signup-form-master/css/style.css
@@ -1,10 +1,10 @@
--root {
+:root {
+  --font-family-main: 'Poppins', sans-serif;
   --color-primary-red: hsl(0, 100%, 74%);
-  --color-primary-green:hsl (154, 59%, 51%);
-  --color-acent-blue: (248, 32%, 49%);
-  --color-neutral-darkblue: hsl(249, 10%, 26%) ;
+  --color-primary-green: hsl(154, 59%, 51%);
+  --color-acent-blue: hsl(248, 32%, 49%);
+  --color-neutral-darkblue: hsl(249, 10%, 26%);
   --color-neutral-grayishblue: hsl(246, 25%, 77%);
-  --font-family-main: font-family: 'Poppins', sans-serif;
 }
 
 * {
@@ -14,6 +14,97 @@
 }
 
 html {
+  font-family: var(--font-family-main);
   height: 100vh;
+  color: white;
 }
 
+section {
+  padding: 50px 20px;
+  background: url(./images/bg-intro-mobile.png), var(--color-primary-red);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.container-info {
+  text-align: center;
+  margin: 25px 0;
+}
+.container-info h1 {
+  font-weight: 700;
+  font-size: 28px;
+}
+
+.container-info p {
+  margin-top: 30px;
+  font-weight: 500;
+}
+
+.container-form {
+  padding: 15px 0;
+}
+
+.container-form h2 {
+  text-align: center;
+  margin: 30px 0;
+  font-size: 16px;
+  background-color: var(--color-acent-blue);
+  padding: 20px 50px;
+  border-radius: 10px;
+  box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
+}
+
+.container-form h2 span{
+  font-weight: 400;
+}
+
+.container-form form {
+  padding: 18px;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 10px;
+  position: relative;
+  box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
+}
+
+.container-form input {
+  font-family: var(--font-family-main);
+  font-weight: 600;
+  border: 1px #0000002b solid;
+  border-radius: 5px;
+  outline: none;
+  margin-bottom: 18px;
+  padding: 15px 23px;
+}
+
+input:-internal-autofill-selected {
+  font-family: var(--font-family-main);
+}
+
+.container-form .button {
+  width: 100%;
+  padding: 18px 23px;
+  font-family: var(--font-family-main);
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  background-color: var(--color-primary-green);
+  color: white;
+  border-radius: 5px;
+  box-shadow: 0px 5px 0px 0px rgba(56,172,119,1);
+}
+
+.container-form p {
+  margin-top: 15px;
+  font-size: 13px;
+  font-weight: 500;
+  text-align: center;
+  color: var(--color-neutral-grayishblue);
+}
+
+.container-form p a {
+  text-decoration:none;
+  font-weight: 600;
+  color: var(--color-primary-red);
+}
