--- a/intro-component-with-signup-form-master/css/style.css
+++ b/intro-component-with-signup-form-master/css/style.css
@@ -19,11 +19,14 @@ html {
   color: white;
 }
 
+main , section {
+  height: 100%
+}
+
 section {
   padding: 50px 20px;
   background: url(./images/bg-intro-mobile.png), var(--color-primary-red);
-  background-position: center;
-  background-repeat: no-repeat;
+ 
 }
 
 .container-info {
@@ -68,18 +71,45 @@ section {
   box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
 }
 
-.container-form input {
+.input {
   font-family: var(--font-family-main);
   font-weight: 600;
   border: 1px #0000002b solid;
   border-radius: 5px;
-  outline: none;
-  margin-bottom: 18px;
   padding: 15px 23px;
 }
 
 input:-internal-autofill-selected {
   font-family: var(--font-family-main);
+}
+
+.container-form .container-icon-error {
+  position: relative;
+}
+
+.icon-error {
+  height: 24px;
+  width: 24px;
+  position: absolute;
+  top:-39px;
+  right: 20px;
+  visibility: hidden;
+}
+
+.label {
+  text-align: right;
+  color: red;
+  font-size: 13px;
+  visibility: hidden;
+}
+
+.visible {
+  visibility: visible;
+  margin: 5px 0 10px 0;
+}
+
+.border-red {
+  border: 1px red solid;
 }
 
 .container-form .button {
@@ -107,4 +137,41 @@ input:-internal-autofill-selected {
   text-decoration:none;
   font-weight: 600;
   color: var(--color-primary-red);
+}
+
+@media (min-width: 655px) {
+  section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: url(./images/bg-intro-desktop.png), var(--color-primary-red);
+  }
+
+  .container-info {
+    width: 50%;
+    margin: 0 15px;
+    text-align: start;
+  }
+  
+  .container-form {
+    width: 50%;
+  }
+  
+}
+
+@media (min-width: 900px) {
+  .container-info {
+    width: 530px;
+  }
+  .container-info h1 {
+    font-size: 40px;
+  }
+
+  .container-form {
+    width: 500px;
+  }
+
+  .container-form form {
+    padding: 30px;
+  }
 }
