Add semicolon in variable of css

--- a/article-preview-component-master/css/style.css
+++ b/article-preview-component-master/css/style.css
@@ -3,7 +3,7 @@
   --color-font-primary:  hsl(217, 19%, 35%);
   --color-font-secondary: hsl(214, 17%, 51%);
   --color-font-thirty: hsl(212, 23%, 69%);
-  --bg-section: hsl(210, 46%, 95%)
+  --bg-section: hsl(210, 46%, 95%);
 }
 
 * {
