--- a/intro-component-with-signup-form-master/css/style.css
+++ b/intro-component-with-signup-form-master/css/style.css
@@ -76,7 +76,11 @@ section {
   font-weight: 600;
   border: 1px #0000002b solid;
   border-radius: 5px;
+  outline: none;
   padding: 15px 23px;
+}
+.input:focus {
+  border:1px solid var(--color-acent-blue);
 }
 
 input:-internal-autofill-selected {
@@ -125,6 +129,21 @@ input:-internal-autofill-selected {
   box-shadow: 0px 5px 0px 0px rgba(56,172,119,1);
 }
 
+.container-sucess {
+  display: none;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.sucess {
+  color: var(--color-primary-green);
+  display:none;
+}
+
+.sucess-visible {
+  display: flex;
+}
+
 .container-form p {
   margin-top: 15px;
   font-size: 13px;
@@ -145,6 +164,8 @@ input:-internal-autofill-selected {
     align-items: center;
     justify-content: center;
     background: url(./images/bg-intro-desktop.png), var(--color-primary-red);
+    height: 100vh;
+    padding: 0 20px;
   }
 
   .container-info {
@@ -155,8 +176,7 @@ input:-internal-autofill-selected {
   
   .container-form {
     width: 50%;
-  }
-  
+  }  
 }
 
 @media (min-width: 900px) {
