--- a/intro-component-with-signup-form-master/css/style.css
+++ b/intro-component-with-signup-form-master/css/style.css
@@ -143,16 +143,21 @@ input:-internal-autofill-selected {
 .sucess-visible {
   display: flex;
 }
+.container-form .container-notification {
+  display: flex;
+  justify-content: center;
+}
 
-.container-form p {
+.container-form .container-notification p {
+  width: 90%;
   margin-top: 15px;
-  font-size: 13px;
+  font-size: 12px;
   font-weight: 500;
   text-align: center;
   color: var(--color-neutral-grayishblue);
 }
 
-.container-form p a {
+.container-form .container-notification p a {
   text-decoration:none;
   font-weight: 600;
   color: var(--color-primary-red);
