--- a/ping-coming-soon-page-master/css/style.css
+++ b/ping-coming-soon-page-master/css/style.css
@@ -22,7 +22,6 @@ html, body {
 }
 
 .container-main {
-  height: 100%;
   padding: 80px 25px 50px;
   display: flex;
   flex-direction: column;
@@ -44,34 +43,169 @@ html, body {
 
 .container-main h4{
   font-size: 13px;
-  font-weight: 600;
+  font-weight: 300;
   margin-bottom: 30px;
 }
 
 .container-main .form {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
 }
 
-.container-main .form input:first-of-type {
+.container-main .form .container-email {
   width: 100%;
-  margin-bottom: 10px;
-  border: 1px var(--color-blue) solid;
-  border-radius: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container-main .form .container-email #email{
+  width: 100%;
   padding: 15px 20px;
+  padding-left: 30px;
+  border: 1px var(--Pale-Blue) solid;
+  border-radius: 50px;
+  outline: none;
 }
 
-.container-main .form input:last-of-type {
+.container-main .form #label {
+  font-size: 12px;
+  font-weight: 300;
+  font-style: italic;
+  margin: 15px 0;
+  display: none;
+}
+
+/* VALIDATION */
+.container-main .error .container-email #email {
+  border: 1px var(--Light-Red) solid;
+}
+
+.container-main .error .container-email #label {
+  color: var(--Light-Red);
+  display: block;
+}
+
+.container-main .success .container-email #email {
+  border: 1px var(--color-blue) solid;
+}
+
+.container-main .success .container-email #label {
+  color: var(--color-blue);
+  display: block;
+
+}
+/* VALIDATION */
+
+.container-main .form #email::-webkit-input-placeholder {
+  color: var(--Pale-Blue);
+  font-weight: 300;
+}
+
+.container-main .form .button {
   width: 100%;
   border-radius: 50px;
+  margin-top: 10px;
   padding: 15px 20px;
   background-color: var(--color-blue);
   color: white;
+  cursor: pointer;
+  box-shadow: 0px 8px 14px var(--Pale-Blue);
 }
 
-.container-social-media {
+.container-main .form .button:hover {
+  background-color: #4f7df3cc;
+}
+
+.container-main .container-img  {
+  margin: 70px 0 100px;
+}
+
+.container-main .container-img img {
+  width: 100%;
+  height: 100%;
+}
+
+.container-main .container-social-media {
   display: flex;
   justify-content: center;
+  margin-bottom: 30px;
+}
+
+.container-main .container-social-media .icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 7px;
+  margin: 0 5px;
+  border: 1px solid var(--Pale-Blue);
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  color: var(--color-blue);
+  font-size: 16px;
+}
+
+.container-main .container-social-media .icon:hover {
+  background-color: var(--color-blue);
+  border: 1px solid var(--color-blue);
+  color: white;
+  cursor: pointer;
+}
+
+.container-main .footer span {
+  font-size: 12px;
+  color: var(--Gray);
+}
+
+@media (min-width:600px) {
+  .container-main {
+    width: 80%;
+    margin: auto;
+  }
+}
+
+@media (min-width:1024px) {
+  .container-main {
+    width: 80%;
+    margin: auto;
+    padding: 80px 0px 50px;
+  }
+
+  .container-main h1 {
+    font-size:  40px;
+    margin-bottom: 15px;
+  }
+
+  .container-main .form {
+    flex-direction: row;
+    justify-content: center;
+    align-items: start;
+    width: 50%;
+  }
+  
+  .container-main .form .container-email {
+    align-items: start;
+    margin-right: 15px;
+  }
+
+  .container-main .form .container-email #email {
+    margin: 0;
+  }
+  
+  .container-main .form .container-email #label {
+    margin-left: 30px;
+    margin-bottom: 0;
+  }
+
+  .container-main .form .button {
+    margin-top: 0;
+    width: 200px;
+  }
+
+  .container-main .container-img {
+    width: 50%;
+  }
 }
