--- a/sunnyside-agency-landing-page-main/css/style.css
+++ b/sunnyside-agency-landing-page-main/css/style.css
@@ -1,1 +1,368 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+:root {
+  --Soft-red: hsl(7, 99%, 70%);
+  --Yellow: hsl(51, 100%, 49%);
+  --Dark-desaturated-cyan: hsl(167, 40%, 24%);
+  --Dark-blue: hsl(198, 62%, 26%);
+  --Dark-moderate-cyan: hsl(168, 34%, 41%);
+  --Dark-moderate-cyan-bg: hsl(167, 44%, 70%);
+  --Very-dark-desaturated-blue: hsl(212, 27%, 19%);
+  --Very-dark-grayish-blue: hsl(213, 9%, 39%);
+  --Dark-grayish-blue: hsl(232, 10%, 55%);
+  --Grayish-blue: hsl(210, 4%, 67%);
+  --White: hsl(0, 0%, 100%);
+  --Barlow:'Barlow', sans-serif;
+  --Fraunces: 'Fraunces', serif;
+  --Semi-bold:600;
+  --Bold: 700;
+  --Black:900;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: var(--Fraunces);
+  font-size: 62.5%;
+  color: var(--Very-dark-desaturated-blue);
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+.container-header {
+  padding: 3.5rem 2rem;
+  height: 100vh;
+  background-image: url(./images/mobile/image-header.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  /*TOGGLE*/
+  /*TOGGLE*/
+}
+
+@media screen and (min-width: 768px) {
+  .container-header {
+    background-image: url(./images/desktop/image-header.jpg);
+  }
+}
+
+.container-header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.container-header-nav-links {
+  margin: 7rem 0;
+  padding: 0;
+  width: 100%;
+  font-size: 1.8rem;
+  font-family: var(--Barlow);
+  color: var(--Dark-grayish-blue);
+  background-color: var(--White);
+  list-style: none;
+  display: none;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+}
+
+.container-header-nav-links li {
+  margin: 2rem;
+}
+
+.container-header-nav-links li button {
+  border: 0;
+  border-radius: 10rem;
+  padding: 1.5rem 2rem;
+  background-color: var(--Yellow);
+  font-size: 1.5rem;
+  font-family: var(--Fraunces);
+  text-transform: uppercase;
+}
+
+.container-header-nav-links::after {
+  position: absolute;
+  content: '';
+  border-bottom: 2.5rem solid var(--White);
+  border-left: 2.5rem solid transparent;
+  right: 0;
+  top: -2.5rem;
+}
+
+.container-header .visible .container-header-nav-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container-header .visible .container-header-nav-burger {
+  opacity: 50%;
+}
+
+.container-header-title {
+  margin-top: 9rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  height: 100%;
+}
+
+.container-header-title h1 {
+  font-size: 4.2rem;
+  font-weight: 900;
+  color: var(--White);
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+  width: 100%;
+}
+
+.container-header-title img {
+  position: absolute;
+  bottom: 50%;
+}
+
+.container-article .article {
+  padding: 3.5rem 2rem;
+  text-align: center;
+}
+
+.container-article .article-title {
+  font-size: 3rem;
+  font-weight: var(--Black);
+}
+
+.container-article .article-text {
+  font-family: var(--Barlow);
+  font-weight: var(--Semi-bold);
+  font-size: 1.8rem;
+  line-height: 3rem;
+  color: var(--Dark-grayish-blue);
+}
+
+.container-article .article-button {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: var(--Black);
+  margin-top: 2.5rem;
+}
+
+.container-article .article-button a {
+  text-decoration: none;
+  color: var(--Very-dark-desaturated-blue);
+}
+
+.container-article .img img {
+  width: 100%;
+}
+
+.container .one {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+}
+
+.container-article .tree {
+  height: 100vh;
+  color: var(--Dark-desaturated-cyan);
+  background-image: url(./images/mobile/image-graphic-design.jpg);
+  background-size: cover;
+  background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.container-article .tree .article-text {
+  color: var(--Dark-desaturated-cyan);
+}
+
+.container-article .four {
+  height: 90vh;
+  color: var(--Dark-blue);
+  background-image: url(./images/mobile/image-photography.jpg);
+  background-size: cover;
+  background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.container-article .four .article-title {
+  margin-top: 0;
+}
+
+.container-article .four .article-text {
+  color: var(--Dark-blue);
+  margin-top: 0;
+  margin-bottom: 2rem;
+  font-size: 1.6rem;
+  line-height: 2.5rem;
+}
+
+.container-testimonials {
+  padding: 3.5rem 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: var(--Grayish-blue);
+}
+
+.container-testimonials-title {
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+}
+
+.container-testimonials-cards .card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 5rem 0;
+}
+
+.container-testimonials-cards .card-img {
+  border-radius: 50%;
+  height: 7.5rem;
+}
+
+.container-testimonials-cards .card-testimony {
+  font-family: var(--Barlow);
+  font-size: 1.8rem;
+  text-align: center;
+  line-height: 2.5rem;
+  color: var(--Very-dark-grayish-blue);
+}
+
+.container-testimonials-cards .card-name {
+  font-size: 2rem;
+  font-weight: var(--Black);
+  color: var(--Very-dark-desaturated-blue);
+  margin-bottom: 1.5rem;
+}
+
+.container-testimonials-cards .card-job {
+  font-size: 1.4rem;
+  font-family: var(--Barlow);
+  margin: 0;
+}
+
+.container-carrusel-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.container-carrusel-img img {
+  width: 50%;
+  height: 50%;
+}
+
+.footer {
+  padding: 3.5rem 2rem;
+  color: var(--Dark-desaturated-cyan);
+  background-color: var(--Dark-moderate-cyan-bg);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer-title {
+  font-family: var(--Barlow);
+  font-size: 2.5rem;
+  margin: 2.5rem 0;
+}
+
+.footer-nav {
+  width: 100%;
+  color: var(--Dark-moderate-cyan);
+}
+
+.footer-nav-links {
+  font-family: var(--Barlow);
+  font-size: 1.8rem;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.footer-social-media {
+  width: 70%;
+  margin: 5rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+/*# sourceMappingURL=style.css.map */
