--- a/sunnyside-agency-landing-page-main/css/style.scss
+++ b/sunnyside-agency-landing-page-main/css/style.scss
@@ -48,10 +48,6 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  
-  @include media-query(medium) {
-    background-image: url(./images/desktop/image-header.jpg);
-  }
 
   &-nav {
     display: flex;
@@ -73,10 +69,10 @@ html {
       top: 0;
       z-index: 1;
 
-      & li {
+      li {
         margin: 2rem;
 
-        & button {
+        button {
           border: 0;
           border-radius: 10rem;
           padding: 1.5rem 2rem;
@@ -96,7 +92,6 @@ html {
       right: 0;
       top:-2.5rem;      
     }
-
   }
    /*TOGGLE*/
   .visible {
@@ -118,7 +113,8 @@ html {
     align-items: center;
     position: relative;
     height: 100%;
-    & h1 {
+    
+    h1 {
       font-size: 4.2rem;
       font-weight: 900;
       color: var(--White);
@@ -127,9 +123,43 @@ html {
       letter-spacing: 0.5rem;
       width: 100%;
     }
-    & img {
+
+    img {
       position: absolute;
       bottom: 50%;
+    }
+  }
+    
+  @include media-query(medium) {
+    background-image: url(./images/desktop/image-header.jpg);
+    padding: 3.5rem;
+
+    &-nav {     
+      align-items: center;
+
+      &-burger {
+        display: none;
+      }
+
+      &-links {
+        position:static;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        background-color: transparent;
+        margin: 0;
+        color: var(--White);
+
+        li {
+          button {
+            background-color: var(--White);
+          }
+        }
+      }
+
+      &-links::after { 
+        display: none;
+      }
     }
   }
 }
@@ -165,11 +195,11 @@ html {
         }
       }
     }    
-    .img {
-      img {
-        width: 100%;
-      }
-    }
+
+    img {
+      width: 100%;
+      height: 100%;
+    }  
   }
 
   .one {
@@ -178,12 +208,11 @@ html {
     }
 
   &-article {    
-    & .tree {
+    .tree {
       height: 100vh;
       color: var(--Dark-desaturated-cyan);
       background-image: url(./images/mobile/image-graphic-design.jpg);
       background-size: cover;
-      background-position: center;
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
@@ -193,25 +222,18 @@ html {
       }
     } 
     
-    & .four {
-      height: 90vh;
+    .four {
+      height: 100vh;
       color: var(--Dark-blue);
       background-image: url(./images/mobile/image-photography.jpg);
       background-size: cover;
-      background-position: center;
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
-
-      & .article-title {
-        margin-top: 0;
-      }
-      
-      & .article-text {
+     
+      .article-text {
         color: var(--Dark-blue);
-        margin-top: 0;
         margin-bottom: 2rem;
-        font-size: 1.6rem;
         line-height: 2.5rem;
       }
     }    
@@ -267,13 +289,55 @@ html {
   &-carrusel {
     &-img {
       display: flex;
-      img{
+      img {
         width: 50%;
-        height: 50%;
       }
     }
   }
-}
+
+  @include media-query(medium)  {
+      &-article {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        .article {         
+          max-width: 50%;          
+          text-align: start;
+        }
+
+        .tree {
+          text-align: center;
+        }
+
+        .four {
+          text-align: center;
+          .article-text {
+            margin: 1.8rem 0 5.5rem;
+          }
+        }
+      }
+      
+      .one {
+        flex-direction: row;
+      }
+
+      &-testimonials {
+        padding: 10rem 5rem;
+        &-cards {
+          display: flex;
+          
+          .card {
+            margin: 5rem 0.5rem;
+          }
+        }
+      }
+
+      &-carrusel {
+        display: flex;
+      }
+    }
+  }
 
 .footer {
   padding: 3.5rem 2rem;
@@ -286,7 +350,6 @@ html {
   &-title {
     font-family: var(--Barlow);
     font-size: 2.5rem;
-    margin: 2.5rem 0;
   }
 
   &-nav {    
@@ -308,5 +371,16 @@ html {
     display: flex;
     align-items: center;
     justify-content: space-around;
+  }
+
+  @include media-query(medium) {
+      &-nav {    
+        width: 50%;
+      }
+
+  &-social-media {
+    width: 20%;
+    margin-top: 7rem;
+  }
   }
 }
