--- a/sunnyside-agency-landing-page-main/css/style.scss
+++ b/sunnyside-agency-landing-page-main/css/style.scss
@@ -5,6 +5,7 @@
   --Dark-blue: hsl(198, 62%, 26%);
   --Dark-moderate-cyan: hsl(168, 34%, 41%);
   --Dark-moderate-cyan-bg: hsl(167, 44%, 70%);
+  --blue-bg: hsl(197, 100%, 67%);
   --Very-dark-desaturated-blue: hsl(212, 27%, 19%);
   --Very-dark-grayish-blue: hsl(213, 9%, 39%);
   --Dark-grayish-blue: hsl(232, 10%, 55%);
@@ -21,7 +22,9 @@
 $breakpoints: (
   small: 540px,
   medium: 768px,
-  large: 1024px
+  large: 1024px,
+  min-large: 1100px,
+  xl: 1240px
 );
 
 @mixin media-query($breakpoint)  {
@@ -68,9 +71,10 @@ html {
       position: absolute;
       top: 0;
       z-index: 1;
-
+      
       li {
         margin: 2rem;
+        cursor: pointer;
 
         button {
           border: 0;
@@ -154,11 +158,23 @@ html {
           button {
             background-color: var(--White);
           }
+
+          button:hover{
+            color: var(--White);
+            background-color: var(--blue-bg);
+            cursor: pointer;
+          }
         }
       }
 
       &-links::after { 
         display: none;
+      }
+    }
+
+    &-title {
+      img {
+        bottom: 65%;
       }
     }
   }
@@ -302,20 +318,30 @@ html {
         align-items: center;
 
         .article {         
-          max-width: 50%;          
+          max-width: 50%;
+          padding: 0 2rem;       
           text-align: start;
+          justify-content: center;
         }
 
         .tree {
           text-align: center;
+          justify-content: flex-end;
+          background-position: center;
         }
 
         .four {
           text-align: center;
+          justify-content: flex-end;
+           background-position: center;
           .article-text {
             margin: 1.8rem 0 5.5rem;
           }
         }
+
+        img {
+          width: 50%;
+        }  
       }
       
       .one {
@@ -328,7 +354,7 @@ html {
           display: flex;
           
           .card {
-            margin: 5rem 0.5rem;
+            margin: 5rem 1rem;
           }
         }
       }
@@ -337,7 +363,47 @@ html {
         display: flex;
       }
     }
+
+    @include media-query(large) {
+      &-article {
+        .tree {
+          background-image: url(./images/desktop/image-graphic-design.jpg);
+        }
+        .four {
+          background-image: url(./images/desktop/image-photography.jpg);
+        }  
+      }
+    }
+
+    @include media-query(min-large) {
+      &-article {
+        .article {
+          padding: 0 10rem;
+          .article-title {
+            font-size: 4rem;            
+          }
+        }        
+        .tree {
+          .article-text {
+            margin: 1.8rem 0 5.5rem;
+          }
+        }
+      }
+    }
+
+    @include media-query(xl) {
+      &-article {
+        .article {
+          padding: 0 15rem;
+          .article-title {
+            font-size: 4rem;            
+          }
+        }   
+      }
+    }
   }
+
+
 
 .footer {
   padding: 3.5rem 2rem;
@@ -362,6 +428,14 @@ html {
       list-style: none;
       display: flex;
       justify-content: space-evenly;
+
+      li {
+        cursor: pointer;
+      }
+
+      li:hover {
+        color: var(--White);
+      }
     }
   }
 
@@ -371,16 +445,21 @@ html {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    color: white;
   }
 
   @include media-query(medium) {
-      &-nav {    
-        width: 50%;
-      }
+    &-nav {    
+      width: 50%;
+    }
 
-  &-social-media {
-    width: 20%;
-    margin-top: 7rem;
-  }
+    &-social-media {
+      width: 20%;
+      margin-top: 7rem;
+
+      path:hover {
+        fill: var(--White);
+      }
+    }
   }
 }
