--- a/interactive-pricing-component-main/css/style.css
+++ b/interactive-pricing-component-main/css/style.css
@@ -1,1 +1,135 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+:root {
+  --soft-cyan-full-slider-bar: hsl(174, 77%, 80%);
+  --strong-cyan-slider-backround: hsl(174, 86%, 45%);
+  --light-grayish-red-discount-background: hsl(14, 92%, 95%);
+  --light-red-discount-text: hsl(15, 100%, 70%);
+  --pale-blue-cta-text: hsl(226, 100%, 87%);
+  --white: hsl(0, 0%, 100%);
+  --very-pale-blue: hsl(230, 100%, 99%);
+  --light-Grayish-Blue: hsl(224, 65%, 95%);
+  --light-Grayish-Blue: hsl(223, 50%, 87%);
+  --grayish-Blue: hsl(225, 20%, 60%);
+  --dark-desaturated-blue: hsl(227, 35%, 25%);
+  --semi-bold: 600;
+  --extra-bold:800;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Manrope', sans-serif;
+  font-size: 62.5%;
+  color: var(--grayish-Blue);
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+.container {
+  padding: 9vh 3vh;
+  background-image: url(./images/bg-pattern.svg);
+  background-repeat: no-repeat;
+  background-color: var(--very-pale-blue);
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.container-header {
+  padding: 4vh 0;
+  text-align: center;
+  background-image: url(./images/pattern-circles.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 3rem;
+}
+
+.container-header h1 {
+  color: var(--dark-desaturated-blue);
+  font-weight: var(--extra-bold);
+}
+
+.container-header p {
+  max-width: 18rem;
+  margin: auto;
+  font-size: 1.3rem;
+  line-height: 2.5rem;
+}
+
+.container-pricing {
+  width: 100%;
+  background-color: var(--white);
+  border-radius: 1rem 1rem 0 0;
+  padding: 3vh;
+}
+
+.container-pricing .pricing {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container-pricing .pricing h2 {
+  font-size: 1.3rem;
+  font-weight: var(--semi-bold);
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+}
+
+.container-pricing .pricing p strong {
+  color: var(--dark-desaturated-blue);
+}
+
+.container-pricing .pricing input {
+  width: 100%;
+}
+
+.container-footer {
+  width: 100%;
+  background-color: var(--white);
+  border-radius: 0 0 1rem 1rem;
+  padding: 3vh;
+  margin-top: 0.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container-footer p {
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+.container-footer .button button {
+  padding: 1rem 4rem;
+  border: 0;
+  border-radius: 2rem;
+  font-size: 1.2rem;
+  color: var(--pale-blue-cta-text);
+  background-color: var(--dark-desaturated-blue);
+}
+/*# sourceMappingURL=style.css.map */
